Making changes to your vertex painted sculpt in Sculpt Mode creates rendering artefacts in the colours relative to your camera position #75908

Closed
opened 2020-04-19 22:58:21 +02:00 by Frozen_Death_Knight · 17 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-17 20:03, hash: 76b3aac802

Short description of error
While doing some regular testing in 2.83, I noticed that the current vertex painting system does not work nicely with Sculpt Mode. I thought the problem might have been related to Delay Viewport Updates because the bug only appeared when sculpting and undoing/redoing in relation to how zoomed in or out the viewport camera was to the model itself. However, toggling it on and off did nothing, so I am left puzzled.
Desktop 2020.04.19 - 13.45.42.02.mp4

Exact steps for others to reproduce the error

  1. Take a human sized sculpt of several tens of thousands of vertices and paint it in Vertex Paint Mode.

  2. Switch to Sculpt Mode.

  3. Make any change to your sculpt with the tools available while zoomed in on the model.

  4. Zoom out. The vertex painting artefacts should be fully visible now.

  5. Use undo/redo to activate or deactivate the bug. The bug will disappear when the entire model is visible in the viewport, but appear if you are zoomed in and then you zoom out again.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-17 20:03, hash: `76b3aac802` **Short description of error** While doing some regular testing in 2.83, I noticed that the current vertex painting system does not work nicely with Sculpt Mode. I thought the problem might have been related to Delay Viewport Updates because the bug only appeared when sculpting and undoing/redoing in relation to how zoomed in or out the viewport camera was to the model itself. However, toggling it on and off did nothing, so I am left puzzled. [Desktop 2020.04.19 - 13.45.42.02.mp4](https://archive.blender.org/developer/F8483346/Desktop_2020.04.19_-_13.45.42.02.mp4) **Exact steps for others to reproduce the error** 1. Take a human sized sculpt of several tens of thousands of vertices and paint it in Vertex Paint Mode. 2. Switch to Sculpt Mode. 3. Make any change to your sculpt with the tools available while zoomed in on the model. 4. Zoom out. The vertex painting artefacts should be fully visible now. 5. Use undo/redo to activate or deactivate the bug. The bug will disappear when the entire model is visible in the viewport, but appear if you are zoomed in and then you zoom out again.

Added subscriber: @Frozen_Death_Knight

Added subscriber: @Frozen_Death_Knight
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Could you please share you .blend file?

Could you please share you .blend file?

@lichtwerk Here's the model.
Urbosa Sculpt.blend

@lichtwerk Here's the model. [Urbosa Sculpt.blend](https://archive.blender.org/developer/F8484798/Urbosa_Sculpt.blend)
Member

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

Can confirm in this file (having trouble reproducing this from scratch though...)

Can confirm in this file (having trouble reproducing this from scratch though...)

Added subscriber: @iss

Added subscriber: @iss

I can cause glitches when going to material preview and solid shading, I think there is same underlying issue. But I can reproduce this even with files created from scratch.

I can cause glitches when going to material preview and solid shading, I think there is same underlying issue. But I can reproduce this even with files created from scratch.
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Member

Added subscribers: @PabloDobarro, @dfelinto

Added subscribers: @PabloDobarro, @dfelinto
Member

#74694, #74622 are also about sculpt drawing glitches.

@iss: if you have a way to repro from scratch: mind putting this in the task description?

@PabloDobarro : mind checking?

@dfelinto: to me, this is a High prio one, feel free to change back...

#74694, #74622 are also about sculpt drawing glitches. @iss: if you have a way to repro from scratch: mind putting this in the task description? @PabloDobarro : mind checking? @dfelinto: to me, this is a High prio one, feel free to change back...

In #75908#915562, @lichtwerk wrote:
@iss: if you have a way to repro from scratch: mind putting this in the task description?

I meant that I can cause glitches when going to material preview and solid shading on file created from scratch
untitled.blend

  • Open Blender (glitches are more prominent on fresh run)
  • Open file

Switch viewport to Material Preview and immediately back to Solid

In some cases it was necessary to repeat step 3.


I have done more investigation on original file, and it seems that issue goes away when you remove other viewports from sculpting workspace. Will do more testing to narrow this down and upload new file if I find "root cause"

> In #75908#915562, @lichtwerk wrote: > @iss: if you have a way to repro from scratch: mind putting this in the task description? I meant that I can cause glitches when going to material preview and solid shading on file created from scratch [untitled.blend](https://archive.blender.org/developer/F8490641/untitled.blend) - Open Blender (glitches are more prominent on fresh run) - Open file # Switch viewport to Material Preview and immediately back to Solid In some cases it was necessary to repeat step 3. ---- I have done more investigation on original file, and it seems that issue goes away when you remove other viewports from sculpting workspace. Will do more testing to narrow this down and upload new file if I find "root cause"
Pablo Dobarro was assigned by Dalai Felinto 2020-05-11 14:35:47 +02:00
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

In this scenario the 'ac' (active vertex color) of the draw batch that sculpting generates contain uninitialized memory. Perhaps we should add a safeguard to regenerate all VBO.

image.png

In this scenario the 'ac' (active vertex color) of the draw batch that sculpting generates contain uninitialized memory. Perhaps we should add a safeguard to regenerate all VBO. ![image.png](https://archive.blender.org/developer/F8530055/image.png)
Pablo Dobarro was unassigned by Jeroen Bakker 2020-05-12 11:44:21 +02:00
Jeroen Bakker self-assigned this 2020-05-12 11:44:21 +02:00

This issue was referenced by 7d38f50367

This issue was referenced by 7d38f5036794e7bf2678c8138b940257b152435b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:05 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75908
No description provided.